<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#87CEFA"
    tools:context="bear.coding.datalec.StackActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="1400dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stack"
            android:textSize="48dp"
            android:id="@+id/textView4" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stack2"
            android:id="@+id/textView2"
            android:textSize="32dp"
            android:layout_marginTop="49dp"
            android:layout_below="@+id/textView4"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stack3"
            android:id="@+id/textView3"
            android:textSize="24dp"
            android:layout_marginTop="52dp"
            android:layout_below="@+id/textView2"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stack4"
            android:textSize="18dp"
            android:layout_marginTop="12dp"
            android:id="@+id/textView5"
            android:layout_below="@+id/textView3"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stack5"
            android:textSize="24dp"
            android:layout_below="@+id/textView5"
            android:layout_alignParentStart="true"
            android:layout_marginTop="26dp"
            android:id="@+id/textView6" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stack6"
            android:textSize="18dp"
            android:id="@+id/textView7"
            android:layout_below="@+id/textView6"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stack7"
            android:textSize="18dp"
            android:layout_marginTop="17dp"
            android:id="@+id/textView8"
            android:layout_below="@+id/textView7"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stack8"
            android:textSize="15dp"
            android:layout_below="@+id/textView8"
            android:layout_alignParentStart="true"
            android:layout_marginTop="23dp"
            android:id="@+id/textView9" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stack9"
            android:textSize="24dp"
            android:layout_marginTop="47dp"
            android:id="@+id/textView10"
            android:layout_below="@+id/textView9"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/stack10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stack10"
            android:textSize="18dp"
            android:layout_below="@+id/textView10"
            android:layout_alignParentStart="true"
            android:layout_marginTop="23dp" />

        <TextView
            android:id='@+id/stack11'
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stack11"
            android:layout_marginTop="10dp"
            android:textSize="18dp"
            android:layout_below="@+id/stack10"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/stack12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stack12"
            android:layout_marginTop="58dp"
            android:textSize="24dp"
            android:layout_below="@+id/stack11"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/stack13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stack13"
            android:layout_below="@+id/stack12"
            android:layout_alignParentStart="true"
            android:layout_marginTop="23dp"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/stack14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stack14"
            android:textSize="18dp"
            android:layout_below="@+id/stack13"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/stack15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stack15"
            android:layout_marginTop="19dp"
            android:textSize="20dp"
            android:layout_below="@+id/stack14"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/stack16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stack16"
            android:textSize="18dp"
            android:layout_below="@+id/stack15"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/stack17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stack17"
            android:layout_below="@+id/stack16"
            android:layout_alignParentStart="true"
            android:layout_marginTop="23dp"
            android:textSize="15dp"/>

        <TextView
            android:id="@+id/stack18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stack18"
            android:layout_below="@+id/stack17"
            android:layout_alignParentStart="true"
            android:layout_marginTop="23dp"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/stack19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stack19"
            android:textSize="18dp"
            android:layout_below="@+id/stack18"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/stack20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stack20"
            android:layout_marginTop="44dp"
            android:textSize="24dp"
            android:layout_below="@+id/stack19"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/stack21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stack21"
            android:layout_below="@+id/stack20"
            android:layout_alignParentStart="true"
            android:layout_marginTop="23dp"
            android:textSize="18dp"/>

        <Button
            android:id="@+id/back1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:layout_below="@+id/stack21"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="224dp" />


    </RelativeLayout>



</ScrollView>